FAMOUS : 9 commit : 이제 더 못해 끝

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         'screen-3xl': '1680px',
                     },
                     fontSize: {
-                        'title-lg': ['96px', '1'],
+                        'title-lg': ['88px', '1'],
                     }
                 }
             }
@@ -76,7 +76,7 @@
         .section-title {
             font-family: 'Poppins', sans-serif;
             font-weight: 900;
-            font-size: clamp(3rem, 5vw, 96px);
+            font-size: clamp(3rem, 5vw, 88px);
             /* Max 96px */
             line-height: 1.0;
             text-transform: uppercase;
@@ -139,6 +139,7 @@
 
         .marquee-track {
             display: flex;
+            align-items: center;
             gap: 1.5rem;
             /* gap-6 equivalent */
             width: max-content;
@@ -293,13 +294,11 @@
                     <!-- Set 1 -->
                     <!-- 1. Circle -->
                     <div class="img-strip-item w-[240px] h-[240px] rounded-full z-10">
-                        <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=2820&auto=format&fit=crop"
-                            class="will-change-transform">
+                        <img src="./assets/images/partner_couple.jpg" class="will-change-transform">
                     </div>
                     <!-- 2. Pill -->
                     <div class="img-strip-item w-[540px] h-[240px] rounded-[120px] z-10">
-                        <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?w=2820&auto=format&fit=crop&q=80"
-                            class="will-change-transform">
+                        <img src="./assets/images/partner_man.png" class="will-change-transform">
                     </div>
                     <!-- 3. Solid Circle (Yellow) -->
                     <div
@@ -307,13 +306,11 @@
                     </div>
                     <!-- 4. Circle -->
                     <div class="img-strip-item w-[260px] h-[260px] rounded-full z-10">
-                        <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?w=2820&auto=format&fit=crop&q=80"
-                            class="will-change-transform">
+                        <img src="./assets/images/partner_coffee.jpg" class="will-change-transform">
                     </div>
                     <!-- 5. Pill -->
                     <div class="img-strip-item w-[480px] h-[220px] rounded-[110px] z-10">
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=2820&auto=format&fit=crop&q=80"
-                            class="will-change-transform">
+                        <img src="./assets/images/partner_girl.png" class="will-change-transform">
                     </div>
                     <!-- 6. Solid Circle (Purple) -->
                     <div
@@ -321,8 +318,7 @@
                     </div>
                     <!-- 7. Circle END -->
                     <div class="img-strip-item w-[240px] h-[240px] rounded-full z-10 opacity-80">
-                        <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?q=80&w=2820&auto=format&fit=crop&q=80"
-                            class="will-change-transform">
+                        <img src="./assets/images/partner_bread.jpg" class="will-change-transform">
                     </div>
                     <!-- 8. Pill (Deep Blue) -->
                     <div class="img-strip-item w-[500px] h-[240px] rounded-[120px] bg-[#0047FF] z-10">
@@ -331,13 +327,11 @@
                     <!-- Set 2 (Cloned for Loop) -->
                     <!-- 1. Circle -->
                     <div class="img-strip-item w-[240px] h-[240px] rounded-full z-10">
-                        <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=2820&auto=format&fit=crop"
-                            class="will-change-transform">
+                        <img src="./assets/images/partner_couple.jpg" class="will-change-transform">
                     </div>
                     <!-- 2. Pill -->
                     <div class="img-strip-item w-[540px] h-[240px] rounded-[120px] z-10">
-                        <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?w=2820&auto=format&fit=crop&q=80"
-                            class="will-change-transform">
+                        <img src="./assets/images/partner_man.png" class="will-change-transform">
                     </div>
                     <!-- 3. Solid Circle (Yellow) -->
                     <div
@@ -345,13 +339,11 @@
                     </div>
                     <!-- 4. Circle -->
                     <div class="img-strip-item w-[260px] h-[260px] rounded-full z-10">
-                        <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?w=2820&auto=format&fit=crop&q=80"
-                            class="will-change-transform">
+                        <img src="./assets/images/partner_coffee.jpg" class="will-change-transform">
                     </div>
                     <!-- 5. Pill -->
                     <div class="img-strip-item w-[480px] h-[220px] rounded-[110px] z-10">
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=2820&auto=format&fit=crop&q=80"
-                            class="will-change-transform">
+                        <img src="./assets/images/partner_girl.png" class="will-change-transform">
                     </div>
                     <!-- 6. Solid Circle (Purple) -->
                     <div
@@ -359,8 +351,7 @@
                     </div>
                     <!-- 7. Circle END -->
                     <div class="img-strip-item w-[240px] h-[240px] rounded-full z-10 opacity-80">
-                        <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?q=80&w=2820&auto=format&fit=crop&q=80"
-                            class="will-change-transform">
+                        <img src="./assets/images/partner_bread.jpg" class="will-change-transform">
                     </div>
                     <!-- 8. Pill (Deep Blue) -->
                     <div class="img-strip-item w-[500px] h-[240px] rounded-[120px] bg-[#0047FF] z-10">
@@ -406,9 +397,9 @@
                 <div
                     class="work-item group relative block mb-32 first:mt-0 w-full max-w-[925px] flex flex-col items-end">
                     <div class="w-full aspect-video rounded-[32px] overflow-hidden mb-8">
-                        <div class="parallax-inner w-full h-[150%] -mt-[15%] relative will-change-transform">
-                            <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=2940&auto=format&fit=crop"
-                                class="w-full h-full object-cover" alt="AI Matching">
+                        <div class="w-full h-full relative">
+                            <img src="./assets/images/smart_work_1.png" class="w-full h-full object-cover"
+                                alt="AI Matching">
                         </div>
                     </div>
                     <div class="flex flex-col justify-between items-start w-full px-6">
@@ -421,9 +412,9 @@
 
                 <div class="work-item group relative block mb-32 w-full max-w-[925px] flex flex-col items-end">
                     <div class="w-full aspect-video rounded-[32px] overflow-hidden mb-8">
-                        <div class="parallax-inner w-full h-[150%] -mt-[15%] relative will-change-transform">
-                            <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?q=80&w=2940&auto=format&fit=crop"
-                                class="w-full h-full object-cover" alt="Automation">
+                        <div class="w-full h-full relative">
+                            <img src="./assets/images/smart_work_2.png" class="w-full h-full object-cover"
+                                alt="Automation">
                         </div>
                     </div>
                     <div class="flex flex-col justify-between items-start w-full px-6">
@@ -436,9 +427,9 @@
 
                 <div class="work-item work-item-last group relative block w-full max-w-[925px] flex flex-col items-end">
                     <div class="w-full aspect-video rounded-[32px] overflow-hidden mb-8">
-                        <div class="parallax-inner w-full h-[150%] -mt-[15%] relative will-change-transform">
-                            <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?q=80&w=2940&auto=format&fit=crop"
-                                class="w-full h-full object-cover" alt="Dashboard">
+                        <div class="w-full h-full relative">
+                            <img src="./assets/images/smart_work_3.png" class="w-full h-full object-cover"
+                                alt="Dashboard">
                         </div>
                     </div>
                     <div class="flex flex-col justify-between items-start w-full px-6">
