--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         /* Global Section Titles */
         .section-title {
             font-family: 'Poppins', sans-serif;
-            font-weight: 900;
+            font-weight: 800;
             font-size: clamp(3rem, 5vw, 88px);
             /* Max 96px */
             line-height: 1.0;
@@ -380,11 +380,11 @@
             <div id="work-left"
                 class="w-full md:w-1/3 h-auto md:h-screen p-0 flex flex-col justify-start z-10 bg-white">
                 <div class="pt-12 md:pt-32">
-                    <span class="block text-[#FF4D00] font-bold mb-4 tracking-widest uppercase">Our Solution</span>
+                    <span class="block text-[#999999] font-bold mb-4 tracking-widest uppercase">Our Solution</span>
                     <h2 class="section-title leading-none mb-6">
                         SMART<br>WORK
                     </h2>
-                    <p class="text-[20px] text-gray-600 font-medium max-w-sm">
+                    <p class="text-[20px] text-[#111111] font-medium max-w-sm">
                         성공적인 중국 마케팅을 위한<br>
                         페이머스만의 독보적인 솔루션
                     </p>
@@ -448,10 +448,10 @@
         <div class="w-full">
             <div class="flex flex-col md:flex-row justify-between items-start md:items-end mb-24">
                 <div>
-                    <span class="block text-[#FF4D00] font-bold tracking-widest mb-4">PERFORMANCE</span>
+                    <span class="block text-[#999999] font-bold tracking-widest mb-4">PERFORMANCE</span>
                     <h2 class="section-title leading-none">WHY FAMOUS?</h2>
                 </div>
-                <p class="mt-6 md:mt-0 text-gray-500 text-lg md:text-xl max-w-md font-medium">
+                <p class="mt-6 md:mt-0 text-[#111111] text-lg md:text-xl max-w-md font-medium">
                     데이터 기반의 정밀한 매칭과<br>압도적인 퍼포먼스를 경험하세요.
                 </p>
             </div>
@@ -550,7 +550,7 @@
 
             <!-- Subtext <-> Button Margin: mt-12 (48px) & Rounded Full -->
             <a href="#"
-                class="mt-12 px-10 py-5 bg-black text-white font-bold text-[18px] hover:bg-[#FF4D00] hover:text-white transition-all duration-300 pointer-events-auto rounded-full group transform hover:-translate-y-1">
+                class="mt-12 px-8 py-3 bg-black text-white font-bold text-[18px] hover:bg-[#FF4D00] hover:text-white transition-all duration-300 pointer-events-auto rounded-full group transform hover:-translate-y-1">
                 View More <span class="ml-2 transition-transform group-hover:translate-x-1">→</span>
             </a>
         </div>
@@ -662,7 +662,7 @@
                     </div>
                 </div>
                 <a href="mailto:support@etribe.co.kr"
-                    class="inline-flex items-center justify-center bg-white text-black px-10 py-5 rounded-full font-bold text-[18px] hover:bg-[#FF4D00] hover:text-white transition-all duration-300 shadow-xl transform hover:-translate-y-1">
+                    class="inline-flex items-center justify-center bg-white text-black px-8 py-3 rounded-full font-bold text-[18px] hover:bg-[#FF4D00] hover:text-white transition-all duration-300 shadow-xl transform hover:-translate-y-1">
                     프로젝트 문의하기 →
                 </a>
             </div>
