--- a/about.html
+++ b/about.html
@@ -270,13 +270,13 @@
                         <div class="absolute top-0 left-0 w-full pt-[48px]">
                             <!-- Stage 1 Left -->
                             <div class="market-text-left-1 w-full">
-                                <h3 class="text-[32px] md:text-[40px] font-semibold leading-snug word-keep">
+                                <h3 class="text-[34px] font-semibold leading-snug word-keep">
                                     한국과 중국 교류<br>재개에 따른<br>소비 회복 가속화
                                 </h3>
                             </div>
                             <!-- Stage 2 Left -->
                             <div class="market-text-left-2 w-full absolute top-[48px] left-0 opacity-0 translate-y-8">
-                                <h3 class="text-[32px] md:text-[40px] font-semibold leading-snug word-keep">
+                                <h3 class="text-[34px] font-semibold leading-snug word-keep">
                                     새로운<br>검색엔진으로 등극한<br>샤오홍슈
                                 </h3>
                             </div>
@@ -433,10 +433,10 @@
 
         <!-- Section 4: Brand Message -->
         <section id="brand-message-section"
-            class="w-full bg-transparent text-white px-6 py-40 md:py-60 flex items-center justify-center overflow-hidden">
+            class="w-full bg-transparent text-white px-6 py-[180px] flex items-center justify-center overflow-hidden">
             <div class="text-center max-w-[1680px] mx-auto z-10 relative">
                 <h2 id="brand-message-text"
-                    class="text-[40px] md:text-[80px] font-semibold leading-tight tracking-tight uppercase">
+                    class="text-[40px] md:text-[96px] font-extrabold leading-tight tracking-tight uppercase">
                     POWERED BY
                     <img src="/star-icon.png" alt="Star"
                         class="inline-block w-[40px] md:w-[70px] align-middle mx-2 animate-spin-slow">
@@ -448,6 +448,198 @@
                     TURN UP THE VOLUME<br>
                     OF YOUR BRAND
                 </h2>
+            </div>
+        </section>
+
+        <!-- Section 5: Our Service -->
+        <section id="service-section" class="w-full bg-transparent text-black px-6 py-[140px]">
+            <div class="max-w-[1680px] mx-auto grid grid-cols-1 md:grid-cols-12 gap-[20px] relative">
+
+                <!-- Left Column (Sticky Intro) -->
+                <div class="col-span-1 md:col-span-4 h-fit sticky top-32">
+                    <span class="block text-gray-400 text-sm font-bold uppercase tracking-[0] mb-6">Our Service</span>
+                    <h2 class="text-4xl md:text-[56px] font-bold leading-tight tracking-tight mb-8">
+                        ZING의<br>
+                        맞춤형 서비스를<br>
+                        소개합니다
+                    </h2>
+                    <p class="text-lg text-gray-600 leading-relaxed word-keep">
+                        체험단과 인플루언서를 브랜드 상황에 맞게 선택·조합해 보세요.<br>
+                        예산과 목표에 따라 전략은 달라집니다.
+                    </p>
+                </div>
+
+                <!-- Right Column (Scrollable Cards) -->
+                <div class="col-span-1 md:col-start-7 md:col-span-6 flex flex-col gap-10">
+
+                    <!-- Card 1: Orange -->
+                    <div
+                        class="w-full bg-[#FF6B00] rounded-[40px] p-10 md:p-14 text-white min-h-[500px] flex flex-col justify-between relative overflow-hidden group hover:scale-[1.02] transition-transform duration-500">
+                        <div>
+                            <span
+                                class="bg-white text-[#FF6B00] px-4 py-2 rounded-full text-xs font-bold mb-6 inline-block">광범위한
+                                노출용</span>
+                            <h3 class="text-[40px] font-bold mb-4">샤오홍슈 체험단</h3>
+                        </div>
+
+                        <!-- Content -->
+                        <div class="space-y-4 z-10 relative">
+                            <div class="flex border-b border-white/20 pb-4">
+                                <span class="w-24 md:w-32 font-bold opacity-80 shrink-0">대상</span>
+                                <span>팔로워 1만 이하</span>
+                            </div>
+                            <div class="flex border-b border-white/20 pb-4">
+                                <span class="w-24 md:w-32 font-bold opacity-80 shrink-0">추천인원</span>
+                                <span>20~50명/월</span>
+                            </div>
+                            <div class="flex">
+                                <span class="w-24 md:w-32 font-bold opacity-80 shrink-0">효과</span>
+                                <span>검색 상단 점령 (키워드 도배),<br>대량 콘텐츠 확보 (가성비 최적)</span>
+                            </div>
+                        </div>
+
+                        <!-- Decorative Element (Optional Icon placeholder) -->
+                        <div
+                            class="absolute right-[-10%] bottom-[20%] w-[300px] opacity-20 rotate-12 pointer-events-none">
+                            <!-- Could add an icon here if requested -->
+                        </div>
+                    </div>
+
+                    <!-- Card 2: Pink -->
+                    <div
+                        class="w-full bg-[#FF0055] rounded-[40px] p-10 md:p-14 text-white min-h-[500px] flex flex-col justify-between relative overflow-hidden group hover:scale-[1.02] transition-transform duration-500">
+                        <div>
+                            <span
+                                class="bg-white text-[#FF0055] px-4 py-2 rounded-full text-xs font-bold mb-6 inline-block">집중
+                                영향력용</span>
+                            <h3 class="text-[40px] font-bold mb-4">샤오홍슈 인플루언서</h3>
+                        </div>
+
+                        <!-- Content -->
+                        <div class="space-y-4 z-10 relative">
+                            <div class="flex border-b border-white/20 pb-4">
+                                <span class="w-24 md:w-32 font-bold opacity-80 shrink-0">대상</span>
+                                <span>팔로워 1만 이상</span>
+                            </div>
+                            <div class="flex border-b border-white/20 pb-4">
+                                <span class="w-24 md:w-32 font-bold opacity-80 shrink-0">추천인원</span>
+                                <span>5~15명/월</span>
+                            </div>
+                            <div class="flex">
+                                <span class="w-24 md:w-32 font-bold opacity-80 shrink-0">효과</span>
+                                <span>브랜드 신뢰도 급상승(팬덤 효과),<br>구매 전환 유도(고퀄리티 리뷰)</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+
+        <!-- Section 6: Scenario -->
+        <section id="scenario-section" class="w-full bg-transparent text-black px-6 py-[140px]">
+            <div class="max-w-[1680px] mx-auto">
+                <!-- Header (Matches Section 5 Style) -->
+                <div class="mb-20">
+                    <span class="block text-gray-400 text-sm font-bold uppercase tracking-[0] mb-6">Scenario</span>
+                    <h2 class="text-4xl md:text-[56px] font-bold leading-tight tracking-tight mb-8">
+                        인기있는 조합 시나리오를<br>
+                        추천해 드려요
+                    </h2>
+                    <p class="text-lg text-gray-600 leading-relaxed word-keep">
+                        합리적인 비용으로 최대의 효과를 만들어 드립니다.
+                    </p>
+                </div>
+
+                <!-- 3-Card Grid -->
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-[16px]">
+
+                    <!-- Card 1: Initial Test (70:30) -->
+                    <div class="bg-white rounded-[40px] shadow-2xl p-10 flex flex-col items-center text-center">
+                        <h3 class="text-2xl font-bold mb-10 w-full text-left">초기 테스트형</h3>
+
+                        <!-- Donut Chart -->
+                        <div class="relative w-48 h-48 mb-12">
+                            <div class="w-full h-full rounded-full"
+                                style="background: conic-gradient(#FF6B00 0% 70%, #FF0055 70% 100%);"></div>
+                            <div class="absolute inset-0 m-auto w-24 h-24 bg-white rounded-full"></div>
+                        </div>
+
+                        <!-- Data -->
+                        <div class="w-full space-y-3 text-left font-bold" style="font-size: 18px;">
+                            <div class="flex justify-between border-b border-gray-100 pb-2">
+                                <span class="text-gray-500">체험단</span>
+                                <span class="text-[#FF6B00]">70%</span>
+                            </div>
+                            <div class="flex justify-between border-b border-gray-100 pb-2">
+                                <span class="text-gray-500">인플루언서</span>
+                                <span class="text-[#FF0055]">30%</span>
+                            </div>
+                            <div class="flex justify-between pt-2">
+                                <span class="text-gray-500">예산</span>
+                                <span>월 100~300만원대</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 2: Stable Growth (50:50) -->
+                    <div class="bg-white rounded-[40px] shadow-2xl p-10 flex flex-col items-center text-center">
+                        <h3 class="text-2xl font-bold mb-10 w-full text-left">안정 성장형</h3>
+
+                        <!-- Donut Chart -->
+                        <div class="relative w-48 h-48 mb-12">
+                            <div class="w-full h-full rounded-full"
+                                style="background: conic-gradient(#FF6B00 0% 50%, #FF0055 50% 100%);"></div>
+                            <div class="absolute inset-0 m-auto w-24 h-24 bg-white rounded-full"></div>
+                        </div>
+
+                        <!-- Data -->
+                        <div class="w-full space-y-3 text-left font-bold" style="font-size: 18px;">
+                            <div class="flex justify-between border-b border-gray-100 pb-2">
+                                <span class="text-gray-500">체험단</span>
+                                <span class="text-[#FF6B00]">50%</span>
+                            </div>
+                            <div class="flex justify-between border-b border-gray-100 pb-2">
+                                <span class="text-gray-500">인플루언서</span>
+                                <span class="text-[#FF0055]">50%</span>
+                            </div>
+                            <div class="flex justify-between pt-2">
+                                <span class="text-gray-500">예산</span>
+                                <span>월 300~600만원대</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Card 3: Branding Focus (30:70) -->
+                    <div class="bg-white rounded-[40px] shadow-2xl p-10 flex flex-col items-center text-center">
+                        <h3 class="text-2xl font-bold mb-10 w-full text-left">브랜딩 집중형</h3>
+
+                        <!-- Donut Chart -->
+                        <div class="relative w-48 h-48 mb-12">
+                            <div class="w-full h-full rounded-full"
+                                style="background: conic-gradient(#FF6B00 0% 30%, #FF0055 30% 100%);"></div>
+                            <div class="absolute inset-0 m-auto w-24 h-24 bg-white rounded-full"></div>
+                        </div>
+
+                        <!-- Data -->
+                        <div class="w-full space-y-3 text-left font-bold" style="font-size: 18px;">
+                            <div class="flex justify-between border-b border-gray-100 pb-2">
+                                <span class="text-gray-500">체험단</span>
+                                <span class="text-[#FF6B00]">30%</span>
+                            </div>
+                            <div class="flex justify-between border-b border-gray-100 pb-2">
+                                <span class="text-gray-500">인플루언서</span>
+                                <span class="text-[#FF0055]">70%</span>
+                            </div>
+                            <div class="flex justify-between pt-2">
+                                <span class="text-gray-500">예산</span>
+                                <span>월 700만원 이상</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </section>
 
@@ -594,9 +786,9 @@
 
             gsap.timeline({
                 scrollTrigger: {
-                    trigger: "#brand-message-section",
-                    start: "top bottom", // Start when section enters from bottom
-                    end: "bottom bottom", // End when section bottom hits bottom of screen
+                    trigger: "#brand-message-text",
+                    start: "top 80%", // Start early: when text enters bottom 20% of screen
+                    end: "top 20%", // End early: when text reaches top 20% of screen
                     scrub: true
                 }
             })
