[ZING] 회사소개 페이지 : 조졌다

--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@
                 <!-- Section Header -->
                 <div class="text-center z-20">
                     <span class="block text-gray-400 text-sm font-bold uppercase tracking-[0] mb-6">Background</span>
-                    <h2 class="text-4xl md:text-[56px] font-bold leading-tight tracking-tight">
+                    <h2 class="text-4xl md:text-[56px] font-extrabold leading-tight tracking-tight">
                         한국 브랜드에 열린<br>
                         중국 시장의 황금기
                     </h2>
@@ -345,7 +345,8 @@
                 <!-- Header -->
                 <div class="text-center mb-20">
                     <span class="block text-gray-400 font-bold uppercase tracking-widest mb-4">Why Zing</span>
-                    <h2 id="pain-points-title" class="text-4xl md:text-[56px] font-bold leading-tight tracking-tight">
+                    <h2 id="pain-points-title"
+                        class="text-4xl md:text-[56px] font-extrabold leading-tight tracking-tight">
                         중국 마케팅, 이런 어려움<br>
                         겪고 계시죠?
                     </h2>
@@ -458,7 +459,7 @@
                 <!-- Left Column (Sticky Intro) -->
                 <div class="col-span-1 md:col-span-4 h-fit sticky top-32">
                     <span class="block text-gray-400 text-sm font-bold uppercase tracking-[0] mb-6">Our Service</span>
-                    <h2 class="text-4xl md:text-[56px] font-bold leading-tight tracking-tight mb-8">
+                    <h2 class="text-4xl md:text-[56px] font-extrabold leading-tight tracking-tight mb-8">
                         ZING의<br>
                         맞춤형 서비스를<br>
                         소개합니다
@@ -541,9 +542,9 @@
         <section id="scenario-section" class="w-full bg-transparent text-black px-6 py-[140px]">
             <div class="max-w-[1680px] mx-auto">
                 <!-- Header (Matches Section 5 Style) -->
-                <div class="mb-20">
+                <div class="mb-20 text-center">
                     <span class="block text-gray-400 text-sm font-bold uppercase tracking-[0] mb-6">Scenario</span>
-                    <h2 class="text-4xl md:text-[56px] font-bold leading-tight tracking-tight mb-8">
+                    <h2 class="text-4xl md:text-[56px] font-extrabold leading-tight tracking-tight mb-8 text-black">
                         인기있는 조합 시나리오를<br>
                         추천해 드려요
                     </h2>
@@ -556,23 +557,23 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-[16px]">
 
                     <!-- Card 1: Initial Test (70:30) -->
-                    <div class="bg-white rounded-[40px] shadow-2xl p-10 flex flex-col items-center text-center">
-                        <h3 class="text-2xl font-bold mb-10 w-full text-left">초기 테스트형</h3>
+                    <div class="bg-[#F5F5F5] rounded-[40px] shadow-sm p-12 flex flex-col items-center text-center">
+                        <h3 class="text-2xl font-bold mb-6 w-full text-left">초기 테스트형</h3>
 
                         <!-- Donut Chart -->
-                        <div class="relative w-48 h-48 mb-12">
+                        <div class="relative w-40 h-40 mb-8">
                             <div class="w-full h-full rounded-full"
                                 style="background: conic-gradient(#FF6B00 0% 70%, #FF0055 70% 100%);"></div>
-                            <div class="absolute inset-0 m-auto w-24 h-24 bg-white rounded-full"></div>
+                            <div class="absolute inset-0 m-auto w-20 h-20 bg-[#F5F5F5] rounded-full"></div>
                         </div>
 
                         <!-- Data -->
-                        <div class="w-full space-y-3 text-left font-bold" style="font-size: 18px;">
-                            <div class="flex justify-between border-b border-gray-100 pb-2">
+                        <div class="w-full space-y-2 text-left font-bold" style="font-size: 18px;">
+                            <div class="flex justify-between border-b border-gray-200 pb-2">
                                 <span class="text-gray-500">체험단</span>
                                 <span class="text-[#FF6B00]">70%</span>
                             </div>
-                            <div class="flex justify-between border-b border-gray-100 pb-2">
+                            <div class="flex justify-between border-b border-gray-200 pb-2">
                                 <span class="text-gray-500">인플루언서</span>
                                 <span class="text-[#FF0055]">30%</span>
                             </div>
@@ -584,23 +585,23 @@
                     </div>
 
                     <!-- Card 2: Stable Growth (50:50) -->
-                    <div class="bg-white rounded-[40px] shadow-2xl p-10 flex flex-col items-center text-center">
-                        <h3 class="text-2xl font-bold mb-10 w-full text-left">안정 성장형</h3>
+                    <div class="bg-[#F5F5F5] rounded-[40px] shadow-sm p-12 flex flex-col items-center text-center">
+                        <h3 class="text-2xl font-bold mb-6 w-full text-left">안정 성장형</h3>
 
                         <!-- Donut Chart -->
-                        <div class="relative w-48 h-48 mb-12">
+                        <div class="relative w-40 h-40 mb-8">
                             <div class="w-full h-full rounded-full"
                                 style="background: conic-gradient(#FF6B00 0% 50%, #FF0055 50% 100%);"></div>
-                            <div class="absolute inset-0 m-auto w-24 h-24 bg-white rounded-full"></div>
+                            <div class="absolute inset-0 m-auto w-20 h-20 bg-[#F5F5F5] rounded-full"></div>
                         </div>
 
                         <!-- Data -->
-                        <div class="w-full space-y-3 text-left font-bold" style="font-size: 18px;">
-                            <div class="flex justify-between border-b border-gray-100 pb-2">
+                        <div class="w-full space-y-2 text-left font-bold" style="font-size: 18px;">
+                            <div class="flex justify-between border-b border-gray-200 pb-2">
                                 <span class="text-gray-500">체험단</span>
                                 <span class="text-[#FF6B00]">50%</span>
                             </div>
-                            <div class="flex justify-between border-b border-gray-100 pb-2">
+                            <div class="flex justify-between border-b border-gray-200 pb-2">
                                 <span class="text-gray-500">인플루언서</span>
                                 <span class="text-[#FF0055]">50%</span>
                             </div>
@@ -612,23 +613,23 @@
                     </div>
 
                     <!-- Card 3: Branding Focus (30:70) -->
-                    <div class="bg-white rounded-[40px] shadow-2xl p-10 flex flex-col items-center text-center">
-                        <h3 class="text-2xl font-bold mb-10 w-full text-left">브랜딩 집중형</h3>
+                    <div class="bg-[#F5F5F5] rounded-[40px] shadow-sm p-12 flex flex-col items-center text-center">
+                        <h3 class="text-2xl font-bold mb-6 w-full text-left">브랜딩 집중형</h3>
 
                         <!-- Donut Chart -->
-                        <div class="relative w-48 h-48 mb-12">
+                        <div class="relative w-40 h-40 mb-8">
                             <div class="w-full h-full rounded-full"
                                 style="background: conic-gradient(#FF6B00 0% 30%, #FF0055 30% 100%);"></div>
-                            <div class="absolute inset-0 m-auto w-24 h-24 bg-white rounded-full"></div>
+                            <div class="absolute inset-0 m-auto w-20 h-20 bg-[#F5F5F5] rounded-full"></div>
                         </div>
 
                         <!-- Data -->
-                        <div class="w-full space-y-3 text-left font-bold" style="font-size: 18px;">
-                            <div class="flex justify-between border-b border-gray-100 pb-2">
+                        <div class="w-full space-y-2 text-left font-bold" style="font-size: 18px;">
+                            <div class="flex justify-between border-b border-gray-200 pb-2">
                                 <span class="text-gray-500">체험단</span>
                                 <span class="text-[#FF6B00]">30%</span>
                             </div>
-                            <div class="flex justify-between border-b border-gray-100 pb-2">
+                            <div class="flex justify-between border-b border-gray-200 pb-2">
                                 <span class="text-gray-500">인플루언서</span>
                                 <span class="text-[#FF0055]">70%</span>
                             </div>
@@ -637,6 +638,94 @@
                                 <span>월 700만원 이상</span>
                             </div>
                         </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- Section 7: Process -->
+        <section id="process-section" class="w-full bg-transparent text-black px-6 py-[140px]">
+            <div class="max-w-[1680px] mx-auto">
+                <!-- Header -->
+                <div class="mb-20 text-center">
+                    <span class="block text-black text-sm font-bold uppercase tracking-[0] mb-6">Process</span>
+                    <h2 class="text-4xl md:text-[56px] font-extrabold leading-tight tracking-tight mb-8">
+                        4단계 진행 프로세스
+                    </h2>
+                </div>
+
+                <!-- Process Steps Layout -->
+                <div
+                    class="relative flex flex-col md:flex-row justify-between items-start md:items-center gap-10 md:gap-4 lg:gap-8 overflow-hidden">
+
+                    <!-- Step 1 -->
+                    <div class="flex flex-col items-center text-center relative z-10 w-full md:w-1/4">
+                        <div
+                            class="w-[200px] h-[200px] bg-[#EAEAEA] rounded-full flex items-center justify-center mb-8 shadow-inner">
+                            <!-- Icon Placeholder -->
+                        </div>
+                        <h3 class="text-2xl font-bold mb-4">무료 상담</h3>
+                        <p class="text-gray-500 font-medium leading-relaxed word-keep" style="font-size: 16px;">
+                            브랜드 진단, 초기 전략, 예산 안내
+                        </p>
+                    </div>
+
+                    <!-- Arrow 1 -->
+                    <div class="hidden md:flex items-center justify-center text-gray-300">
+                        <svg class="w-12 h-12" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z" />
+                        </svg>
+                    </div>
+
+                    <!-- Step 2 -->
+                    <div class="flex flex-col items-center text-center relative z-10 w-full md:w-1/4">
+                        <div
+                            class="w-[200px] h-[200px] bg-[#EAEAEA] rounded-full flex items-center justify-center mb-8 shadow-inner">
+                            <!-- Icon Placeholder -->
+                        </div>
+                        <h3 class="text-2xl font-bold mb-4">컨설팅</h3>
+                        <p class="text-gray-500 font-medium leading-relaxed word-keep" style="font-size: 16px;">
+                            타겟 분석, 전략 수집, 크리에이터 기준 협의
+                        </p>
+                    </div>
+
+                    <!-- Arrow 2 -->
+                    <div class="hidden md:flex items-center justify-center text-gray-300">
+                        <svg class="w-12 h-12" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z" />
+                        </svg>
+                    </div>
+
+                    <!-- Step 3 -->
+                    <div class="flex flex-col items-center text-center relative z-10 w-full md:w-1/4">
+                        <div
+                            class="w-[200px] h-[200px] bg-[#EAEAEA] rounded-full flex items-center justify-center mb-8 shadow-inner">
+                            <!-- Icon Placeholder -->
+                        </div>
+                        <h3 class="text-2xl font-bold mb-4">캠페인 실행</h3>
+                        <p class="text-gray-500 font-medium leading-relaxed word-keep" style="font-size: 16px;">
+                            섭외·계약, 콘텐츠 관리, 일정·품질 통제
+                        </p>
+                    </div>
+
+                    <!-- Arrow 3 -->
+                    <div class="hidden md:flex items-center justify-center text-gray-300">
+                        <svg class="w-12 h-12" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z" />
+                        </svg>
+                    </div>
+
+                    <!-- Step 4 -->
+                    <div class="flex flex-col items-center text-center relative z-10 w-full md:w-1/4">
+                        <div
+                            class="w-[200px] h-[200px] bg-[#EAEAEA] rounded-full flex items-center justify-center mb-8 shadow-inner">
+                            <!-- Icon Placeholder -->
+                        </div>
+                        <h3 class="text-2xl font-bold mb-4">결과 보고</h3>
+                        <p class="text-gray-500 font-medium leading-relaxed word-keep" style="font-size: 16px;">
+                            조회수·참여율 분석, ROI 개선, 다음 전략 수립
+                        </p>
                     </div>
 
                 </div>
