--- a/about.html
+++ b/about.html
@@ -326,14 +326,15 @@
                     <!-- Top Right Star -->
                     <div
                         class="star-icon absolute top-[-5%] right-[25%] w-32 h-32 md:w-48 md:h-48 z-30 pointer-events-none">
-                        <img src="/star-icon.png" alt="Star Icon" class="w-full h-full object-contain animate-float">
+                        <img src="./assets/images/star-blue.png" alt="Star Icon"
+                            class="w-full h-full object-contain animate-float">
                     </div>
 
                     <!-- Bottom Left Star (New) -->
                     <div
                         class="star-icon-2 absolute bottom-[10%] left-[25%] w-24 h-24 md:w-36 md:h-36 z-30 pointer-events-none">
-                        <img src="/star-icon.png" alt="Star Icon" class="w-full h-full object-contain animate-float"
-                            style="animation-delay: -3s;">
+                        <img src="./assets/images/star-yellow.png" alt="Star Icon"
+                            class="w-full h-full object-contain animate-float" style="animation-delay: -3s;">
                     </div>
 
                 </div>
@@ -646,10 +647,10 @@
 
         <!-- Section 7: Process -->
         <section id="process-section" class="w-full bg-transparent text-black px-6 py-[140px]">
-            <div class="max-w-[1680px] mx-auto">
+            <div class="max-w-[1280px] mx-auto">
                 <!-- Header -->
                 <div class="mb-20 text-center">
-                    <span class="block text-black text-sm font-bold uppercase tracking-[0] mb-6">Process</span>
+                    <span class="block text-gray-400 text-sm font-bold uppercase tracking-[0] mb-6">Process</span>
                     <h2 class="text-4xl md:text-[56px] font-extrabold leading-tight tracking-tight mb-8">
                         4단계 진행 프로세스
                     </h2>
@@ -662,7 +663,7 @@
                     <!-- Step 1 -->
                     <div class="flex flex-col items-center text-center relative z-10 w-full md:w-1/4">
                         <div
-                            class="w-[200px] h-[200px] bg-[#EAEAEA] rounded-full flex items-center justify-center mb-8 shadow-inner">
+                            class="w-[200px] h-[200px] bg-[#99D98C] rounded-full flex items-center justify-center mb-8 shadow-inner">
                             <!-- Icon Placeholder -->
                         </div>
                         <h3 class="text-2xl font-bold mb-4">무료 상담</h3>
@@ -681,7 +682,7 @@
                     <!-- Step 2 -->
                     <div class="flex flex-col items-center text-center relative z-10 w-full md:w-1/4">
                         <div
-                            class="w-[200px] h-[200px] bg-[#EAEAEA] rounded-full flex items-center justify-center mb-8 shadow-inner">
+                            class="w-[200px] h-[200px] bg-[#2F80ED] rounded-full flex items-center justify-center mb-8 shadow-inner">
                             <!-- Icon Placeholder -->
                         </div>
                         <h3 class="text-2xl font-bold mb-4">컨설팅</h3>
@@ -700,7 +701,7 @@
                     <!-- Step 3 -->
                     <div class="flex flex-col items-center text-center relative z-10 w-full md:w-1/4">
                         <div
-                            class="w-[200px] h-[200px] bg-[#EAEAEA] rounded-full flex items-center justify-center mb-8 shadow-inner">
+                            class="w-[200px] h-[200px] bg-[#F4C430] rounded-full flex items-center justify-center mb-8 shadow-inner">
                             <!-- Icon Placeholder -->
                         </div>
                         <h3 class="text-2xl font-bold mb-4">캠페인 실행</h3>
@@ -719,7 +720,7 @@
                     <!-- Step 4 -->
                     <div class="flex flex-col items-center text-center relative z-10 w-full md:w-1/4">
                         <div
-                            class="w-[200px] h-[200px] bg-[#EAEAEA] rounded-full flex items-center justify-center mb-8 shadow-inner">
+                            class="w-[200px] h-[200px] bg-[#9B51E0] rounded-full flex items-center justify-center mb-8 shadow-inner">
                             <!-- Icon Placeholder -->
                         </div>
                         <h3 class="text-2xl font-bold mb-4">결과 보고</h3>
@@ -733,6 +734,154 @@
         </section>
 
     </main>
+
+    <!-- Section 8: With Us -->
+    <section id="with-us-section" class="w-full bg-transparent text-black px-6 py-[140px]">
+        <div class="max-w-[1280px] mx-auto">
+            <!-- Header -->
+            <div class="mb-20 text-center with-us-text-group">
+                <span class="block text-gray-400 text-sm font-bold uppercase tracking-[0] mb-6">With Us</span>
+                <h2 class="text-4xl md:text-[56px] font-extrabold leading-tight tracking-tight mb-8">
+                    ZING과 함께 시작하세요
+                </h2>
+                <p class="text-lg text-gray-600 leading-relaxed word-keep description-text">
+                    ZING은 디지털 크리에이티브 그룹 이트라이브의 중국 마케팅 전문 조직으로,<br>
+                    한국인 매니저와 중국인 마케터가 하나의 팀으로 협업하는 시스템입니다.
+                </p>
+            </div>
+
+            <!-- Stats Grid -->
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-32">
+                <!-- Stat 1 -->
+                <div
+                    class="stat-card bg-[#F9F9F9] rounded-[40px] p-16 text-center group hover:bg-[#FE3262] transition-all duration-500 shadow-[0_20px_40px_rgba(0,0,0,0.05)] hover:-translate-y-2 hover:shadow-[0_30px_60px_rgba(254,50,98,0.3)]">
+                    <div
+                        class="text-[80px] md:text-[100px] font-black text-[#FE3262] mb-4 group-hover:text-white transition-colors duration-500 leading-none tracking-tighter">
+                        20<span class="text-4xl md:text-[50px] ml-2 align-baseline tracking-normal">년</span>
+                    </div>
+                    <div
+                        class="stat-text text-2xl md:text-3xl font-bold text-gray-800 group-hover:text-white transition-colors duration-500">
+                        의 노하우
+                    </div>
+                </div>
+
+                <!-- Stat 2 -->
+                <div
+                    class="stat-card bg-[#F9F9F9] rounded-[40px] p-16 text-center group hover:bg-[#FE3262] transition-all duration-500 shadow-[0_20px_40px_rgba(0,0,0,0.05)] hover:-translate-y-2 hover:shadow-[0_30px_60px_rgba(254,50,98,0.3)]">
+                    <div
+                        class="text-[80px] md:text-[100px] font-black text-[#FE3262] mb-4 group-hover:text-white transition-colors duration-500 leading-none tracking-tighter">
+                        177<span class="text-4xl md:text-[50px] ml-2 align-baseline tracking-normal">명</span>
+                    </div>
+                    <div
+                        class="stat-text text-2xl md:text-3xl font-bold text-gray-800 group-hover:text-white transition-colors duration-500">
+                        의 전문가
+                    </div>
+                </div>
+            </div>
+
+            <!-- Team Section -->
+            <div class="text-center">
+
+                <!-- 6 Image Grid -->
+                <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-6">
+                    <!-- Placeholder 1 -->
+                    <div
+                        class="team-card aspect-square bg-[#F0F0F0] rounded-[24px] overflow-hidden relative shadow-sm hover:scale-[1.05] transition-transform duration-300">
+                        <div class="absolute inset-0 flex items-center justify-center text-gray-300 font-bold">Image 1
+                        </div>
+                    </div>
+                    <!-- Placeholder 2 -->
+                    <div
+                        class="team-card aspect-square bg-[#F0F0F0] rounded-[24px] overflow-hidden relative shadow-sm hover:scale-[1.05] transition-transform duration-300">
+                        <div class="absolute inset-0 flex items-center justify-center text-gray-300 font-bold">Image 2
+                        </div>
+                    </div>
+                    <!-- Placeholder 3 -->
+                    <div
+                        class="team-card aspect-square bg-[#F0F0F0] rounded-[24px] overflow-hidden relative shadow-sm hover:scale-[1.05] transition-transform duration-300">
+                        <div class="absolute inset-0 flex items-center justify-center text-gray-300 font-bold">Image 3
+                        </div>
+                    </div>
+                    <!-- Placeholder 4 -->
+                    <div
+                        class="team-card aspect-square bg-[#F0F0F0] rounded-[24px] overflow-hidden relative shadow-sm hover:scale-[1.05] transition-transform duration-300">
+                        <div class="absolute inset-0 flex items-center justify-center text-gray-300 font-bold">Image 4
+                        </div>
+                    </div>
+                    <!-- Placeholder 5 -->
+                    <div
+                        class="team-card aspect-square bg-[#F0F0F0] rounded-[24px] overflow-hidden relative shadow-sm hover:scale-[1.05] transition-transform duration-300">
+                        <div class="absolute inset-0 flex items-center justify-center text-gray-300 font-bold">Image 5
+                        </div>
+                    </div>
+                    <!-- Placeholder 6 -->
+                    <div
+                        class="team-card aspect-square bg-[#F0F0F0] rounded-[24px] overflow-hidden relative shadow-sm hover:scale-[1.05] transition-transform duration-300">
+                        <div class="absolute inset-0 flex items-center justify-center text-gray-300 font-bold">Image 6
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section 9: Contact Us -->
+    <section id="contact-section" class="w-full bg-black text-white px-6 py-[180px] relative overflow-hidden">
+        <style>
+            @keyframes float {
+
+                0%,
+                100% {
+                    transform: translateY(0);
+                }
+
+                50% {
+                    transform: translateY(-20px);
+                }
+            }
+
+            .animate-float {
+                animation: float 3s ease-in-out infinite;
+            }
+        </style>
+        <div class="max-w-[1200px] mx-auto text-center relative z-10">
+
+            <!-- Stars Decoration -->
+            <!-- Blue Star (Top Left) -->
+            <img src="./assets/images/star-blue.png" alt="Star"
+                class="absolute left-[5%] top-[-50px] w-24 md:w-32 animate-float"
+                style="animation-duration: 4s; animation-delay: 0s;">
+
+            <!-- Pink Star (Top Right) -->
+            <img src="./assets/images/star-pink.png" alt="Star"
+                class="absolute right-[10%] top-[-20px] w-20 md:w-28 animate-float"
+                style="animation-duration: 5s; animation-delay: 1s;">
+
+            <!-- Yellow Star (Bottom Left) -->
+            <img src="./assets/images/star-yellow.png" alt="Star"
+                class="absolute left-[15%] bottom-[-40px] w-16 md:w-24 animate-float"
+                style="animation-duration: 3.5s; animation-delay: 2s;">
+
+
+            <h2 class="text-4xl md:text-[64px] font-bold leading-tight tracking-tight mb-8 word-keep">
+                징(ZING) - 중국시장,<br>
+                지금 울려 퍼트린다.
+            </h2>
+            <p class="text-lg md:text-xl text-gray-400 leading-relaxed word-keep mb-16 max-w-3xl mx-auto">
+                지금 움직이는 브랜드만이, 중국 소비자의 선택지가 됩니다.<br>
+                망설이는 순간, 경쟁사는 이미 그 자리를 차지하고 있습니다.
+            </p>
+
+            <a href="#contact"
+                class="inline-flex items-center gap-2 bg-gradient-to-r from-[#4ADE80] to-[#2DD4BF] hover:opacity-90 text-black font-bold text-lg px-12 py-5 rounded-full transition-all duration-300 transform hover:scale-105 shadow-[0_0_30px_rgba(74,222,128,0.4)]">
+                문의하기
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 20 20" fill="currentColor">
+                    <path
+                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+                </svg>
+            </a>
+        </div>
+    </section>
     <footer class="bg-white pt-48 pb-20 px-6 md:px-[80px] border-t border-gray-100">
         <div class="max-w-[1400px] mx-auto">
             <div class="flex flex-col lg:flex-row justify-between gap-32 mb-40">
@@ -885,6 +1034,31 @@
                 .fromTo("body", { backgroundColor: "#000000" }, { backgroundColor: "#ffffff", ease: "none" })
                 // Animate Text White -> Black
                 .to("#brand-message-text", { color: "#000000", ease: "none" }, "<");
+
+            // With Us Section Transition (White -> Black)
+            gsap.timeline({
+                scrollTrigger: {
+                    trigger: "#with-us-section",
+                    start: "top 45%", // When section hits middle-ish
+                    end: "top 10%",
+                    scrub: true
+                }
+            })
+                // Body to Black
+                .to("body", { backgroundColor: "#000000", ease: "none" })
+                // Section Text to White
+                .to("#with-us-section", { color: "#ffffff", ease: "none" }, "<")
+                // Stats Title to White
+                .to("#with-us-section h2", { color: "#ffffff", ease: "none" }, "<")
+                // Description to Gray-300
+                .to(".description-text", { color: "#d1d5db", ease: "none" }, "<")
+                // Team description to White
+                .to(".team-desc-text", { color: "#ffffff", ease: "none" }, "<")
+                // Cards to Dark Gray
+                .to(".stat-card", { backgroundColor: "#1e1e1e", ease: "none" }, "<")
+                .to(".team-card", { backgroundColor: "#1e1e1e", ease: "none" }, "<")
+                // Stat Text to White (initial state is gray-800)
+                .to(".stat-text", { color: "#ffffff", ease: "none" }, "<");
 
             ScrollTrigger.refresh();
         });
